# Tessera

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  findings.md  pyproject.toml  run_nccoe_scenario.sh
.github/workflows/: ci.yml  publish-scorecard.yml  registry-mirror-fullsync.yml  registry-mirror.yml  spire-integration.yml  wheels.yml
benchmarks/: README.md  __init__.py  __main__.py  bench_context.py  bench_e2e.py  bench_labels.py  bench_policy.py  bench_quarantine.py  harness.py
benchmarks/adversarial/: __init__.py  attacks.yaml  judge.py  runner.py
benchmarks/agentdojo/: __init__.py  __main__.py  harness.py  report.py  suites.py  tasks.py
benchmarks/agentdojo_live/: __init__.py  defense_adapter.py  results.json  results_large.json  results_large_fixed.json  run_baseline.py  run_cohere.py  run_gemini.py  run_haiku.py  run_mistral.py  run_openai.py  (+2 more)
corpus/: CONTRIBUTING.md  README.md  RELEASE_NOTES_v2.md
docs/: AGENTGATEWAY_PROPOSAL.md  AGENT_SECURITY_MESH_GAP_AUDIT_2026-04-10.md  AGENT_SECURITY_MESH_V1_PLAN.md  AGENT_SECURITY_MESH_V1_SPEC.md  AGENT_SECURITY_MESH_V2_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  ENHANCEMENT_PLAN.md  GAP_ANALYSIS_AGENTDOJO.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  OWASP_NIST_CONTROL_MATRIX.md  ROADMAP.md  benchmarks.md  ci-status.md
examples/: __init__.py  certifiably_robust_rag.py  crewai_multi_agent_gated.py  injection_blocked.py  quarantine_demo.py  quarantine_openai.py  threat_intel_consumer.py
papers/: two-primitives-for-agent-security-meshes.md
rust/: Cargo.toml  README.md  ROADMAP.md
rust/agentgateway-plugins/: README.md
rust/agentgateway-plugins/audit-event-sink/: Cargo.toml
rust/agentgateway-plugins/audit-event-sink/src/: lib.rs
rust/agentgateway-plugins/mcp-drift-scanner/: Cargo.toml
rust/agentgateway-plugins/mcp-drift-scanner/src/: lib.rs
rust/agentgateway-plugins/spiffe-svid-validator/: Cargo.toml
rust/agentgateway-plugins/spiffe-svid-validator/src/: lib.rs
rust/bench/: baseline.md  results.md  simd-json-spike.md
rust/crates/tessera-audit/: Cargo.toml  README.md
rust/crates/tessera-audit/src/: audit_log.rs  lib.rs
rust/crates/tessera-bench/: Cargo.toml  README.md
rust/crates/tessera-bench/benches/: cel_eval.rs  json_extractor.rs  policy_eval.rs
rust/crates/tessera-bench/examples/: spawn_primitives.rs
rust/crates/tessera-bench/src/: lib.rs  main.rs  report.rs  runner.rs
rust/crates/tessera-bench/src/workloads/: evaluate.rs  label.rs  mixed.rs  mod.rs  sustained.rs  verify.rs
rust/crates/tessera-bench/tests/: in_process_smoke.rs
rust/crates/tessera-core/: Cargo.toml  README.md
rust/crates/tessera-core/src/: context.rs  label.rs  labels.rs  lib.rs
rust/crates/tessera-gateway/: Cargo.toml  README.md
rust/crates/tessera-gateway/src/: endpoints.rs  lib.rs  main.rs  simd_extractor.rs  telemetry.rs
rust/crates/tessera-gateway/src/filters/: a2a.rs  identity_verification.rs  mod.rs  upstream.rs
rust/crates/tessera-gateway/tests/: python_audit_interop.rs
rust/crates/tessera-policy/: Cargo.toml  README.md
rust/crates/tessera-policy/src/: builder.rs  cel.rs  cel_jit.rs  compliance.rs  delegation.rs  delegation_intent.rs  evidence.rs  lib.rs  mcp_baseline.rs  policy.rs  provenance.rs  ratelimit.rs  replay.rs  sarif.rs  sensitivity.rs  url_rules.rs
rust/crates/tessera-policy/tests/: python_cel_interop.rs  python_delegation_interop.rs  python_evidence_interop.rs  python_provenance_interop.rs  python_ratelimit_interop.rs
rust/crates/tessera-py/: Cargo.toml  MIGRATION.md  README.md  pyproject.toml
rust/crates/tessera-py/python/tessera_rs/: __init__.py  audit.py  cel.py  context.py  label.py  policy.py  ratelimit.py  scanners.py  ssrf.py  url_rules.py
rust/crates/tessera-py/src/: lib.rs
rust/crates/tessera-runtime/: Cargo.toml  README.md
rust/crates/tessera-runtime/src/: approval.rs  builder_llm.rs  guardrail.rs  lib.rs  llm_client.rs  sarif_sink.rs  session_context.rs  sessions.rs
rust/crates/tessera-scanners/: Cargo.toml  README.md
rust/crates/tessera-scanners/src/: binary_content.rs  canary.rs  directive.rs  heuristic.rs  intent.rs  lib.rs  pii.rs  prompt_screen.rs  py_callback.rs  rag.rs  supply_chain.rs  tool_descriptions.rs  tool_output_schema.rs  tool_shadow.rs  unicode.rs
rust/crates/tessera-scanners/tests/: python_canary_interop.rs  python_rag_baseline_interop.rs
rust/scripts/: bench-compare.sh  pgo-build.sh
rust/tessera-gateway/: Cargo.toml  README.md
rust/tessera-gateway/.cargo/: config.toml
rust/tessera-gateway/benches/: policy_eval.rs
rust/tessera-gateway/src/: endpoints.rs  lib.rs  main.rs  policy.rs  session_context.rs  ssrf_guard.rs  url_rules.rs
rust/tessera-gateway/src/filters/: label_verification.rs  mod.rs  policy_evaluation.rs
scanners/: REPORT.md  REPORT_principles_gcg_resistance.json
scorecard/: index.xml  paired-gpt-5.intoto.dsse.json  sample.intoto.dsse.json  sample.intoto.jsonl  sitemap.xml
scripts/: benchmark_reference.py
specs/: tessera_control_flow.cfg  tessera_control_flow.tla  tessera_invariant.cfg  tessera_invariant.tla
tests/: test_a2a.py  test_adapter_aliases.py  test_adapters.py  test_adversarial.py  test_agentdojo_adapter.py  test_agentdojo_submit.py  test_agentmesh_cli.py  test_agentmesh_langchain_adapter.py  test_agentmesh_openai_adapter.py  test_agentmesh_sdk.py  test_approval.py  test_atlas_navigator_layer.py  test_audit_log.py  test_camel_interpreter.py  test_certifiably_robust_rag.py  test_cli_mcp_fetch.py  test_compliance.py  test_content_inspector.py  test_control_plane.py  test_critical_gaps.py  test_datalog_overlay.py  test_decision_model.py  test_delegation.py  test_destructive_guard.py  test_embedding_shadow.py  test_enhanced_adapter.py  test_events.py  test_evidence.py  test_gap_analysis.py  test_guardrail.py  test_high_gaps.py  test_hooks.py  test_identity.py  test_image_inspector.py  test_intent_drift_scanner.py  test_ir.py  test_labels.py  test_lethal_trifecta.py  test_manifest_schema_freeze.py  test_mcp.py  (+79 more)
tools/: regenerate_atlas_layer.py
(+391 files in other folders)
