[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-mesh"
version = "1.0.1"
description = "Signed provenance labels and taint-tracking policy for LLM context windows."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.5",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # Phase 1 wave 1A property-based tests for the label lattice
    # algebraic laws live under tests/invariants/. Without this,
    # `pip install -e '.[dev]'` in CI cannot import hypothesis and
    # pytest fails at collection time.
    "hypothesis>=6.100",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "pyjwt[crypto]>=2.8",
    "mcp>=1.0",
    "grpcio>=1.70",
    "grpcio-tools>=1.70",
    "protobuf>=4.25",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    # Pulled in so tests/test_prometheus_sink.py can import; matches
    # the optional [prometheus] extra version pin.
    "prometheus_client>=0.15",
]
otel = [
    "opentelemetry-api>=1.25",
]
spiffe = [
    "pyjwt[crypto]>=2.8",
    "spiffe>=0.2.5",
]
mcp = [
    "mcp>=1.0",
]
cel = [
    "cel-python>=0.1",
]
sessions = [
    "cryptography>=42.0",
]
agentmesh = [
    "pyyaml>=6.0",
]
xds = [
    "grpcio>=1.70",
    "protobuf>=4.25",
]
langchain = [
    "langchain-core>=0.2",
]
openai-agents = [
    "openai-agents>=0.0.3",
]
crewai = [
    "crewai>=0.50",
]
google-adk = [
    "google-adk>=0.3",
]
llamaindex = [
    "llama-index-core>=0.10",
]
haystack = [
    "haystack-ai>=2.0",
]
langgraph = [
    "langgraph>=0.2",
]
pydantic-ai = [
    "pydantic-ai>=0.0.5",
]
agentdojo = [
    "agentdojo>=1.2",
]
perplexity = [
    "torch>=2.0",
    "transformers>=4.30",
]
guardrail = [
    "anthropic>=0.30",
]
guardrail-openai = [
    "openai>=1.0",
]
datalog = [
    # Phase 3 wave 3A: pure-Python Datalog with stratified negation.
    # The default DatalogPolicyEngine ships an in-tree evaluator;
    # this extra installs pyDatalog for higher-throughput rule sets.
    # The spec called for "ascent", a Rust crate; pyDatalog is the
    # established Python equivalent (PyPI, MIT-licensed).
    "pyDatalog>=0.17",
]
prometheus = [
    # TPS-006 drift-monitor Prometheus exporter
    # (tessera.event_sinks.prometheus_sink). The Prometheus sink is
    # gated behind this extra so the default install stays free of
    # observability-stack deps; consumers opt in with
    # `pip install tessera[prometheus]`.
    "prometheus_client>=0.15",
]
conformance = [
    # TPS-005 adapter conformance suite. Pull every framework
    # adapter Tessera supports so live-integration conformance tests
    # under tests/conformance/ can run against real framework
    # objects (gated by `pytest -m integration`). The fast,
    # stub-based contract tests in the same files run without
    # this extra installed.
    "langchain-core>=0.2",
    "langgraph>=0.2",
    "crewai>=0.50",
    "llama-index-core>=0.10",
    "pydantic-ai>=0.0.5",
]
redteam = [
    # TPS-004 community red-team corpus + reproducer
    # (tessera.redteam.*). The default install ships every dep
    # the loader / runner / CLI need; this extra is named for
    # discoverability and so the auditor-quickstart can document
    # `pip install 'tessera[redteam]'` as the canonical install.
    "jsonschema>=4.21",
]
redteam-garak = [
    # Optional Garak compatibility shim
    # (tessera.redteam.garak_adapter). Install only if the
    # auditor wants to drive Tessera probes through Garak's CLI.
    "garak>=0.10",
]

[project.scripts]
tessera = "tessera.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["agentmesh", "agentmesh.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: live-framework conformance tests (gated on the matching framework being installed; opt in via `pytest -m integration` or run the full suite with the `conformance` extra installed)",
]
