[workspace]
resolver = "2"
members = [
    "crates/tessera-core",
    "crates/tessera-scanners",
    "crates/tessera-audit",
    "crates/tessera-policy",
    "crates/tessera-runtime",
    "crates/tessera-gateway",
    "crates/tessera-bench",
    "crates/tessera-py",
]
# Default to building everything except the PyO3 wheel: that crate
# links a Python extension and fails plain `cargo build` without the
# Python development headers. Build it explicitly via `maturin
# develop` or `maturin build` from `crates/tessera-py`.
default-members = [
    "crates/tessera-core",
    "crates/tessera-scanners",
    "crates/tessera-audit",
    "crates/tessera-policy",
    "crates/tessera-runtime",
    "crates/tessera-gateway",
    "crates/tessera-bench",
]

[workspace.package]
version = "0.11.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
repository = "https://github.com/kenithphilip/Tessera"
authors = ["Kenith Philip"]

[workspace.dependencies]
# Shared dependency versions. Crates pin via `workspace = true` so
# bumping a version is a one-line change at the root.
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
glob = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
secrecy = "0.8"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spiffe = { version = "0.12", default-features = false, features = ["workload-api-jwt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "sync", "time"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
# Phase 4 audit-log writer channel.
crossbeam-channel = "0.5"
# Phase 4 concurrent session store.
dashmap = "6"
# Phase 4 sessions: AES-256-GCM with HKDF key derivation.
aes-gcm = "0.10"
hkdf = "0.12"
# Phase 6 mmap audit verifier.
memmap2 = "0.9"
# Phase 7 OpenTelemetry-native tracing (behind the gateway's `otel` feature).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
# Phase 1 perf wins.
aho-corasick = "1"
arc-swap = "1"
globset = "0.4"
mimalloc = { version = "0.1", default-features = false }
regex = "1"
simd-json = "0.13"
strsim = "0.11"
# v0.10.0 Wave B: CEL evaluator (parity port of tessera.cel_engine).
cel-interpreter = "0.9"
cel-parser = "0.8"
# v0.10.0 Wave B2: optional cranelift-jit codegen for the simple
# CEL subset (int comparisons + boolean composition). Behind the
# `cel-jit` feature flag in tessera-policy so the default build
# stays light. cranelift-jit pulls ~50 MB of build artifacts.
cranelift = "0.110"
cranelift-jit = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
# Phase 1 internal use.
tempfile = "3"
# Phase 5 bench harness.
hdrhistogram = "7"
clap = { version = "4", features = ["derive"] }
# Phase 3 PyO3 wheel.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }

[workspace.lints.rust]
# Standard hygiene. Crate-level overrides go in each crate's
# [lints.rust] block when a deliberate exception is needed.
unsafe_code = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Lints that catch real bugs and have no false positives in this
# codebase. Pedantic / nursery groups stay off; they would gate on
# stylistic preferences the workspace does not enforce.
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
str_to_string = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
