[package]
name = "tessera-agentgateway-audit-event-sink"
version = "0.14.0"
edition = "2021"
publish = false
description = "Hash-chained audit event sink plugin for upstream agentgateway. In-tree until the upstream PR merges."

[lib]
name = "tessera_agentgateway_audit_event_sink"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
