[package]
name = "tessera-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Append-only JSONL hash-chained audit log with optional truncation seal and cross-language interop with the Python tessera.audit_log module."

[dependencies]
crossbeam-channel = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
