[package]
name = "tessera-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tessera gateway: axum HTTP service that wires the Tessera primitives (labels, context, policy, session_context, audit, ssrf_guard, url_rules) into a deployable proxy. Includes the legacy chat-mediation, A2A JSON-RPC, SPIFFE, and native TLS surfaces."
publish = false

[dependencies]
# Workspace crates: the primitives this gateway exposes.
tessera-core = { path = "../tessera-core" }
tessera-audit = { path = "../tessera-audit" }
tessera-policy = { path = "../tessera-policy" }
tessera-runtime = { path = "../tessera-runtime" }

# Network and serialization.
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
spiffe = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Phase 1 perf wins.
arc-swap = { workspace = true }
mimalloc = { workspace = true }

# Phase 7 OpenTelemetry-native tracing. Behind the `otel` feature so
# the default build stays light. Enable with `--features otel`.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[features]
default = []
# Wire `tracing` spans through to an OTLP exporter (gRPC over tonic).
# Operators set `OTEL_EXPORTER_OTLP_ENDPOINT` etc.; see the gateway
# README for the full env-var matrix.
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
