[package]
name = "tessera-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tessera policy engine: taint-tracking ToolRequirement evaluation, SSRF guard, URL rules. Phase 2 will add sensitivity, ratelimit, evidence, provenance, delegation, compliance, replay, and policy_builder."

[dependencies]
tessera-core = { path = "../tessera-core" }
tessera-audit = { path = "../tessera-audit" }
chrono = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

# v0.10.0 Wave B: CEL evaluator. Parity port of
# tessera.cel_engine (Python). Used by Policy::evaluate after the
# taint-floor check passes; deny-only refinements.
cel-interpreter = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
