[package]
name = "tessera-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async runtime surfaces for Tessera: per-session Context store, sessions, approval, guardrail, SARIF event sink. Phases 4 will populate the LLM-call surfaces."

[dependencies]
tessera-core = { path = "../tessera-core" }
tessera-policy = { path = "../tessera-policy" }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tessera-audit = { path = "../tessera-audit" }

[lints]
workspace = true
